--- a/form.html
+++ b/form.html
@@ -171,11 +171,11 @@
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputState">Mobile number</label>
-                    <input type="text" class="form-control" name="mobno" id="mobno" placeholder="Mobile number">
+                    <input type="text" maxlength="10" class="form-control" name="mobno" id="mobno" placeholder="Mobile number">
                 </div>
                 <div class="form-group col-md-2">
                     <label for="inputZip">Pincode</label>
-                    <input type="text" class="form-control" name="pincode" id="inputZip">
+                    <input type="text" maxlength="7" class="form-control" name="pincode" id="inputZip">
                 </div>
 					
                 </div><div class="form-group col">
@@ -209,8 +209,8 @@
                     <label>Select Number of Labour need</label>
                     <select id="inputState" class="form-control" name="labour">
                         <option selected>2</option>
-                        <option>2-4</option>
-                        <option>4-6</option>
+                        <option>4</option>
+                        <option>6</option>
                         <option>more than 6</option>
                     </select>
                 </div>
