--- a/services.html
+++ b/services.html
@@ -278,7 +278,7 @@ color: #000000;
                                 <p class="card-text"> our proficient workforce executes these coating services by making use of best coating material.
                                      We provide these coating services to patrons on demand at affordable rates.</p>
                                 </div>
-                                <a style="margin-top: 10px;" href="waterproof.html" class="btn btn-primary">Read More</a>
+                                <a style="margin-top: 10px;" href="swimming.html" class="btn btn-primary">Read More</a>
                             
                         </div>
                     </div>
@@ -320,7 +320,7 @@ color: #000000;
 
                            Our carpenter and polishing experts are highly skilled and furniture polished by our experts makes your furniture stand out from the rest</p>
                                 </div>
-                                <a style="margin-top: 10px;" href="polishing.html" class="btn btn-primary">Read More</a>
+                                <a style="margin-top: 10px;" href="tile.html" class="btn btn-primary">Read More</a>
                             
                         </div>
                     </div>
@@ -347,7 +347,7 @@ color: #000000;
                     <h2>Consistently Delightful</h2>
                 </div>
                 <h6>Excellence is our goal, even for something as simple as getting your price right on our website. Now more than ever you should look for a professional service that has always committed to delivering great results and exceeding your expectations.</h6>
-                <a href="#" class="btn credit-btn btn-2 box-shadow">Explore</a>
+                <a href="contact.html" class="btn credit-btn btn-2 box-shadow">Explore</a>
             </div>
         </div>
         <!-- Special Feature Thumbnail -->
@@ -369,7 +369,7 @@ color: #000000;
                     <h2>Trusted Proffesionals</h2>
                 </div>
                 <h6>We hire and train kind and skilled experts who are committed to making your home shine. We have developed industry-leading processes and practices that bring you safety, happiness, and convenience.</h6>
-                <a href="#" class="btn credit-btn box-shadow">Read More</a>
+                <a href="form.html" class="btn credit-btn box-shadow">Book Now</a>
             </div>
         </div>
     </section>
